# chess

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  chess-class-diagramm  chess-rules.txt  classes.html  dir_000000_000002.html  dir_000000_000006.html  dir_000000_000011.html  dir_000000_000014.html  dir_000001_000002.html  dir_000001_000005.html  dir_000001_000006.html  dir_000001_000014.html  dir_000002_000000.html  dir_000002_000001.html  dir_000002_000003.html  dir_000002_000004.html  dir_000002_000006.html  dir_000002_000007.html  dir_000002_000014.html  dir_000003_000000.html  dir_000003_000002.html  dir_000003_000004.html  dir_000003_000006.html  dir_000004_000002.html  dir_000004_000007.html  dir_000005_000002.html  dir_000005_000006.html  dir_000006_000000.html  dir_000006_000002.html  dir_000006_000007.html  dir_000006_000014.html  dir_000007_000000.html  dir_000007_000014.html  dir_000008_000000.html  (+303 more)
.github/workflows/: build.yml  docs.yml
_sources/api/: class_app.rst.txt  class_audio_manager.rst.txt  class_bishop.rst.txt  class_capture_sound.rst.txt  class_check_indicator.rst.txt  class_check_sound.rst.txt  class_checkboard.rst.txt  class_click_sound.rst.txt  class_drawable.rst.txt  class_endgame_indicator.rst.txt  class_endgame_sound.rst.txt  class_font_lib.rst.txt  class_game.rst.txt  class_h_u_d.rst.txt  class_in_game_menu.rst.txt  class_king.rst.txt  class_knight.rst.txt  class_main_menu.rst.txt  class_menu.rst.txt  class_menu_option.rst.txt  class_movable.rst.txt  class_move_sound.rst.txt  class_opening_screen.rst.txt  class_pawn.rst.txt  class_pawn_count.rst.txt  class_player.rst.txt  class_playing_screen.rst.txt  class_point.rst.txt  class_promotable.rst.txt  class_queen.rst.txt  class_rectangle.rst.txt  class_rook.rst.txt  class_screen.rst.txt  class_shader.rst.txt  class_soldier.rst.txt  class_sound.rst.txt  class_square.rst.txt  class_turn_indicator.rst.txt  class_uniform.rst.txt  class_updateable.rst.txt  (+1040 more)
api/: class_app.html  class_audio_manager.html  class_bishop.html  class_capture_sound.html  class_check_indicator.html  class_check_sound.html  class_checkboard.html  class_click_sound.html  class_drawable.html  class_endgame_indicator.html  class_endgame_sound.html  class_font_lib.html  class_game.html  class_h_u_d.html  class_in_game_menu.html  class_king.html  class_knight.html  class_main_menu.html  class_menu.html  class_menu_option.html  class_movable.html  class_move_sound.html  class_opening_screen.html  class_pawn.html  class_pawn_count.html  class_player.html  class_playing_screen.html  class_point.html  class_promotable.html  class_queen.html  class_rectangle.html  class_rook.html  class_screen.html  class_shader.html  class_soldier.html  class_sound.html  class_square.html  class_turn_indicator.html  class_uniform.html  class_updateable.html  (+1043 more)
d0/d07/: MoveTakeback_8cpp__incl.dot  MoveTakeback_8cpp__incl.map  MoveTakeback_8cpp__incl.md5
d0/d0b/: HUD_8h.html  HUD_8h_source.html
d0/d0f/: structprivateAudioDevice__coll__graph.map  (+1 more)
d0/d64/: Rook_8h.html  (+1 more)
docs/: CMakeLists.txt
docs-doxygen/: CMakeLists.txt
docs-sphinx/: Doxyfile.in  Makefile  conf.py  index.rst
include/: App.h
include/sgg/: CMakeLists.txt  graphics.h
include/sgg/sgg/: AudioManager.cpp  AudioManager.h  GLbackend.cpp  GLbackend.h  fonts.cpp  fonts.h  graphics.cpp  graphics.h  shader.cpp  texture.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  (+103 more)
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/game/: Bishop.cpp  CMakeLists.txt  Checkboard.cpp  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  PawnColor.cpp  Player.cpp  Queen.cpp  Rook.cpp  Soldier.cpp  Square.cpp
src/game/game/: Bishop.h  Checkboard.h  Game.h  King.h  Knight.h  Movable.h  Pawn.h  PawnColor.h  Promotable.h  Queen.h  Rook.h  Soldier.h  Square.h
src/game/src/: Bishop.cpp  Checkboard.cpp  Clock.cpp  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  PawnColor.cpp  Queen.cpp  Rook.cpp  Soldier.cpp  Square.cpp
src/graphics/: CMakeLists.txt  InGameMenu.cpp  MainMenu.cpp  Menu.cpp  MenuOption.cpp  MenuScreen.cpp  OpeningScreen.cpp  PlayingScreen.cpp  Point.cpp  Rectangle.cpp  Screen.cpp
src/graphics/graphics/: ButtonType.h  InGameMenu.h  Menu.h  MenuOption.h  OpeningScreen.h  PlayingScreen.h  Point.h  Rectangle.h  Screen.h  Updateable.h
src/graphics/src/: InGameMenu.cpp  MainMenu.cpp  Menu.cpp  MenuOption.cpp  OpeningScreen.cpp  PlayingScreen.cpp  Point.cpp  Rectangle.cpp
src/hud/: CMakeLists.txt  CheckIndicator.cpp  Draw.cpp  EndgameIndicator.cpp  HUD.cpp  Indicator.cpp  MoveTakeback.cpp  Moveboard.cpp  Offer.cpp  PawnCount.cpp  Resignment.cpp  Timer.cpp  TurnIndicator.cpp
src/hud/hud/: CheckIndicator.h  Draw.h  EndgameIndicator.h  HUD.h  Offer.h  TimeIncrement.h  TurnIndicator.h
src/hud/src/: CheckIndicator.cpp  EndgameIndicator.cpp  HUD.cpp  TimeIncrement.cpp  TurnIndicator.cpp
src/sounds/: CMakeLists.txt  CaptureSound.cpp  ClickSound.cpp  DrawSound.cpp  EndGameSound.cpp  LoseSound.cpp  MoveSound.cpp  ResignSound.cpp  Sound.cpp  TimeOutSound.cpp  WinSound.cpp
src/sounds/sounds/: CaptureSound.h  CheckSound.h  ClickSound.h  DrawSound.h  EndGameSound.h  LoseSound.h  MoveSound.h  Sound.h  TimeOutSound.h  WinSound.h
src/sounds/src/: CaptureSound.cpp  CheckSound.cpp  ClickSound.cpp  ClockSound.cpp  EndGameSound.cpp  MoveSound.cpp  Sound.cpp
src/util/: CMakeLists.txt  custom-string.cpp  paths.cpp
src/util/src/: paths.cpp
src/util/util/: paths.h
tests/: CMakeLists.txt  test.cpp
tests/features/: start_game.feature
tests/step_definitions/: CMakeLists.txt
tests/step_definitions/start_game/: CMakeLists.txt  start_game.cpp
(+2674 files in other folders)
